@@ -76,7 +76,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/11/19 01:41:32 $}]
+          [::xotcl::rcs date {$Date: 2004/11/19 22:59:37 $}]
         </TD>
       </TR>
     </TABLE>
